--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "node-mongo-api",
   "version": "1.0.0",
   "description": "RESTful API with MVC format.",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node ./bin/www"
+    "server:watch": "nodemon -w server.js"
   },
   "dependencies": {
     "await-to-js": "^2.0.1",
@@ -20,6 +20,7 @@
     "mongoose": "^5.0.1",
     "mongoose-validator": "^2.0.2",
     "morgan": "~1.9.0",
+    "nodemon": "^1.18.3",
     "parse-error": "^0.2.0",
     "passport": "^0.4.0",
     "passport-jwt": "^3.0.0",
